--- a/Version 2/MyPortfoliov2.css
+++ b/Version 2/MyPortfoliov2.css
@@ -77,11 +77,15 @@ hr{
 	/*background: #333333;*/  /* fallback for old browsers */
 /*background: -webkit-linear-gradient(to bottom, #dd1818, #333333); */ /* Chrome 10-25, Safari 5.1-6 */
 /*background: linear-gradient(to bottom, #dd1818, #333333);*/ /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
 	background: #CFCFCF;
 	padding-top: 60px;
-	min-height: 100vh;
+	min-height: 55vh;
 	margin-bottom: 0;
+	box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
 }
+
+
 
 #skills ul {
 	margin: 0;
@@ -97,6 +101,7 @@ button{
 	background-color: #535e6d;
 	padding-top: 60px;
 	min-height: 700px;
+	box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
 }
 
 #skills h2, #portfolio h2, #about h2, #contact h2{
@@ -124,7 +129,7 @@ button{
   background: -webkit-linear-gradient(to bottom, #333333, #dd1818); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to bottom, #333333, #dd1818); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 	padding-top: 60px;
-	min-height: 100vh;
+	min-height: 55vh;
 	margin-top: -8px;
 }
 
@@ -168,9 +173,24 @@ ul {
 	grid-gap: 20px;
 	grid-template-areas: "htmlSkill cssSkill javascriptSkill";
 }
+.hard-skills h3 {
+	text-align: center;
+}
 .html-skills {
 	grid-area: htmlSkill;
 }
 .css-skills {
 	grid-area: cssSkill;
+}
+.javascript-skills {
+	grid-area: javascriptSkill;
+}
+.skillImages {
+	margin: 0 auto;
+	max-height: 90px;
+	padding-bottom: 10px;
+	text-align: center;
+}
+.skillComments {
+	margin-top: 1px;
 }
