--- a/Version 2/MyPortfoliov2.css
+++ b/Version 2/MyPortfoliov2.css
@@ -11,6 +11,11 @@ body {
 	font-size: 15px;
 	color: red;
 	font-family: 'Rock Salt', cursive;
+	text-decoration: none;
+}
+
+.navbar-brand:hover {
+	color: red
 }
 
 svg {
@@ -104,6 +109,11 @@ button{
 	box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
 }
 
+#portfolio a {
+	color: black;
+	text-decoration: none;
+}
+
 #skills h2, #portfolio h2, #about h2, #contact h2{
 	text-align: center;
 	color: white;
@@ -162,35 +172,18 @@ ul {
 	margin: 0;
 
 }
-#icons, a{
+#icons a{
 	color: red;
 	float: right;
 }
 
-.hard-skills {
-	display: grid;
-	grid-template-rows: auto;
-	grid-gap: 20px;
-	grid-template-areas: "htmlSkill cssSkill javascriptSkill";
-}
-.hard-skills h3 {
-	text-align: center;
-}
-.html-skills {
-	grid-area: htmlSkill;
-}
-.css-skills {
-	grid-area: cssSkill;
-}
-.javascript-skills {
-	grid-area: javascriptSkill;
-}
 .skillImages {
 	margin: 0 auto;
 	max-height: 90px;
 	padding-bottom: 10px;
-	text-align: center;
+	align-items: center;
 }
 .skillComments {
 	margin-top: 1px;
 }
+
