--- a/Version 2/MyPortfoliov2.css
+++ b/Version 2/MyPortfoliov2.css
@@ -1,15 +1,34 @@
+/* Variables */
+:root {
+	--link-hover-color: #ff0033;
+	--main-background-color: #e9e9e9;
+	--box-background-dark: #333333;
+	--box-background-light: #f8f8f8;
+	--dark-font-color: #444;
+	--light-font-color: #d6d8de;
+	--subtext-font-color: rgb(143, 143, 143);
+	--secondary-font-color: rgb(109, 108, 108);
+	--shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	--shadow-hover: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.38);
+	
+}
+
+/* Global */
 body {
 	font-family: 'BenchNine', sans-serif;
 	font-size: 20px;
+	background-color: var(--main-background-color)
 }
 
+
+/* Navigation CSS */
 .navbar {
 	background: rgba(52, 53, 55, .95);
 }
 
 .navbar-brand {
 	font-size: 15px;
-	color: red;
+	color: red !important;
 	font-family: 'Rock Salt', cursive;
 	text-decoration: none;
 }
@@ -18,14 +37,19 @@ body {
 	color: red
 }
 
+/* Home CSS */
+.svg-container {
+	width: 70rem;
+}
 svg {
-	height: 100%;
-	width: 100%;
+	/* height: 100%;
+	width: 100%; */
 	/*margin-bottom: 100px;*/
 	/*padding-bottom: 120px;*/
-}
+} 
 
 .jumbo-bg{
+	width: 100%;
 	margin: 0;
 	min-height: 1000px;
 	background-image: url(garrhet-sampson-178990-unsplash.jpg);
@@ -35,30 +59,9 @@ svg {
     background-size: cover;
 }
 
-#lineDrawing::after {
-	
-}
-/*.bg {
-	background: url("garrhet-sampson-178990-unsplash.jpg");
-	height: 100%;
-	background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}*/
-
-.jumbotron h1{
-	padding-top: 30%;
-	color: black;
-	text-align: center;
-	text-transform: uppercase;
-	text-shadow:	0px 4px 3px rgba(0,0,0,0.4),
-					0px 8px 13px rgba(0,0,0,0.1),
-					0px 18px 23px rgba(0,0,0,0.1);
-}
-
 .jumbotron h2 {
 	font-size: 45px;
-	color: red;
+	color: var(--link-hover-color);
 	text-align: center;
 	text-transform: uppercase;
 	text-shadow:	0px 4px 3px rgba(0,0,0,0.4),
@@ -71,83 +74,118 @@ svg {
 }
 
 hr{
-
     width: 400px;
     border-top: 1px solid #f8f8f8;
-    border-bottom: 1px solid rgba(0,0,0,0.2)
+    border-bottom: 1px solid rgba(0,0,0,0.2);
     margin-bottom: 20px;
 }
 
+/* About CSS */
+#about {
+	color: var(--dark-font-color);
+   	background-image: radial-gradient( circle, #f8f8f8, #f1f1f1, #eaeaea, #e4e4e4, #dddddd );
+}
+
+.about-comments {
+	padding: 75px;
+}
+.about-text{
+   text-align: left;
+   font-size: 27px;
+}
+
+#about a{
+	text-decoration: underline;
+    color: inherit;
+}
+
+#about a:hover {
+	color: var(--link-hover-color);
+}
+
+/* Skills CSS */
 #skills {
-	/*background: #333333;*/  /* fallback for old browsers */
-/*background: -webkit-linear-gradient(to bottom, #dd1818, #333333); */ /* Chrome 10-25, Safari 5.1-6 */
-/*background: linear-gradient(to bottom, #dd1818, #333333);*/ /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 	box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
-	background: #CFCFCF;
-	padding-top: 60px;
-	min-height: 55vh;
+	background: var(--box-background-dark);
+	padding: 75px;
 	margin-bottom: 0;
 	box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
 }
 
-
-
-#skills ul {
-	margin: 0;
+.box {
+	text-align: center;
+	color: var(--light-font-color);
+	padding: 0 0 15px 0;
 }
 
-button{
-	padding: 0 30px 0 30px;
-	border: 2px dashed red;
-	
+.skillImages {
+	margin: 0 auto;
+	max-height: 90px;
+	padding-bottom: 10px;
+}
+.skillComments {
+	margin-top: 1px;
+	text-align: center;
 }
 
+/* Portfolio CSS */
 #portfolio{
 	background-color: #535e6d;
 	padding-top: 60px;
 	min-height: 700px;
 	box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
 }
-
+.card{
+	height: 28rem;
+	padding: 5px;
+	background-color: var(--box-background-light);
+	-webkit-transition: all ease-in-out 200ms;
+    -o-transition: all ease-in-out 200ms;
+    transition: all ease-in-out 200ms;
+	-webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	box-shadow: var(--shadow)
+}
+.card:hover{
+	-webkit-transform: translateY(-2px);
+        -ms-transform: translateY(-2px);
+            transform: translateY(-2px);
+    -webkit-box-shadow:0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.38);
+            box-shadow: var(--shadow-hover)
+}
 #portfolio a {
 	color: black;
 	text-decoration: none;
 }
+.card-img-top {
+    width: 100%;
+    height: 16rem;
+    border-top-left-radius: calc(.25rem - 1px);
+    border-top-right-radius: calc(.25rem - 1px);
+}
+.card-block {
+	padding: 25px 5px 15px 5px;
+}
+.card-title {
+	color: var(--dark-font-color);
+	font-weight: 400;
+	padding: 0 0 5px 0;
+}
+.card-text{
+	color: var(--subtext-font-color);
+	padding: 10px 0 10px 0;
+}
 
-#skills h2, #portfolio h2, #about h2, #contact h2{
+#skills h2, #portfolio h2{
+	padding-bottom: 50px;
 	text-align: center;
 	color: white;
 	text-shadow:	0px 4px 3px rgba(0,0,0,0.4),
 					0px 8px 13px rgba(0,0,0,0.1),
 					0px 18px 23px rgba(0,0,0,0.1);
 }
-}
-
-.port-header, .about-header, .contact-header{
-	margin-bottom: 50px;
-}
 
 .fa{
 	text-align: center;
-}
-.card-block {
-	padding: 15px;
-}
-
-#about {
-	 background: #333333; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to bottom, #333333, #dd1818); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to bottom, #333333, #dd1818); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-	padding-top: 60px;
-	min-height: 55vh;
-	margin-top: -8px;
-}
-
-.about-text{
-	color: gray;
-	text-align: center;
-	list-style-type: none;
-	font-size: 30px;
 }
 
 ul {
@@ -173,17 +211,10 @@ ul {
 
 }
 #icons a{
-	color: red;
+	color: #121111;
 	float: right;
 }
 
-.skillImages {
-	margin: 0 auto;
-	max-height: 90px;
-	padding-bottom: 10px;
-	align-items: center;
+#icons a:hover{
+	color: var(--link-hover-color)
 }
-.skillComments {
-	margin-top: 1px;
-}
-
